# VTools

./: .env  Dockerfile  docker-compose.yml  entrypoint.sh  pending_products.xlsx  pyproject.toml  requirements.txt
app_unrecognized_mdse_kaspi/: admin.py  apps.py  download.py  models.py  tasks.py
app_unrecognized_mdse_kaspi/migrations/: 0001_initial.py  0002_product_in_file.py
core/: settings.py  urls.py
db/: db.sqlite3
